# segmentasi-ahc-api

./: .gitignore  dataset.csv  pyproject.toml
segmentasi_ahc_api/: __init__.py
segmentasi_ahc_api/app/: __init__.py
segmentasi_ahc_api/app/database/: __init__.py
segmentasi_ahc_api/app/features/upload_csv/: routes.py  utils.py
segmentasi_ahc_api/app/models/: clusters.py  customers.py  products.py  segmentations.py  transactions.py
segmentasi_ahc_api/app/templates/: __init__.py
static/css/: app.css
tailwindcss/: package.json  tailwind.config.js
templates/: base.html  index.html  upload_csv.html
