[tool.poetry]
name = "segmentasi-ahc-api"
version = "0.1.0"
description = ""
authors = ["Alif Nuryana <alifnuryana0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.3"}
sqlmodel = "^0.0.22"
pandas = "^2.2.3"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
